# nixos-opencode-config

./: .envrc  .gitignore  .gitmodules  AGENTS.md  OPTIMIZATIONS.md  README.md  TODO.md  default.nix  flake.nix  go.work  go.work.sum  tsconfig.json
.githooks/: pre-commit
.opencode/: WORKFLOW-OPTIMIZATION-CANDIDATES.md  WORKFLOW-OPTIMIZATIONS.md
.opencode/command/: migrate.md
.opencode/doc/: iterate.md  plugin.md
config/: .gitignore  opencode.json  package.json  plugin  tool-lengths-reference.md  tsconfig.json  tui.json
config/agent/: ORCHESTRATOR-PLANNING-RULES.md  README_ORCHESTRATOR.MD  codebase-explorer.md  coderabbit.md  commit.md  discord-messages.md  discord.md  mcp-search.md  orchestrator-builder.md  orchestrator-coder.md  orchestrator-coderabbit.md  orchestrator-plan-reviewer-glm.md  orchestrator-plan-reviewer-gpt5.md  orchestrator-planner.md  orchestrator-quality-gate-glm.md  orchestrator-quality-gate-gpt5.md  orchestrator-requirements-final.md  orchestrator-requirements-preflight.md  orchestrator-runner.md  orchestrator.md
config/command/: code-review.md  commit-submodule.md  commit.md  document.md  implement-plan-glm.md  modularize-code.md  orchestrate-plan.md  parameterize-tests.md  plan.md  prompt-pack-generator.md  (+1 more)
scripts/: README.md  chunk-files-by-tokens.py  iterate-static-check.py  iterate-static-check.sh  model-tiers.json  opencode-model-tiers  opencode-work-mode  render-file.sh  render-file.ts  sync-rules-aggregate.sh  token-count-after-expand.py  validate-file-interp.sh  validate-file-interp.ts
tools/: Cargo.toml  README.md  render-file.sh  validate-file-interp.sh
tools/chunk-files-by-tokens/: Cargo.toml
tools/chunk-files-by-tokens/src/: main.rs
tools/iterate-static-check/: Cargo.toml
tools/iterate-static-check/src/: main.rs
tools/model-switcher/: Cargo.toml  README.md
tools/model-switcher/src/: config.rs  env.rs  lib.rs  main.rs  types.rs
tools/model-switcher/src/tui/: app.rs  mod.rs  render.rs
tools/model-switcher/tests/: config_tests.rs  models_tests.rs  rewrite_tests.rs
tools/model-tiers/: Cargo.toml  README.md  cli.go  cli_test.go  config.go  config_test.go  env.go  go.mod  main.go  models.go  models_test.go  rewrite.go  rewrite_test.go  sort.go  tui.go  types.go
tools/model-tiers/src/: cli.rs  config.rs  env.rs  lib.rs  main.rs  models.rs  rewrite.rs  sort.rs  tui.rs  types.rs
tools/model-tiers/src/tui/: handler.rs  render.rs
tools/model-tiers/tests/: cli_tests.rs  config_tests.rs  models_tests.rs  rewrite_tests.rs
tools/opencode-sessions/: .gitignore  Cargo.toml  README.md
tools/opencode-sessions/src/: cli.rs  constants.rs  format.rs  main.rs
tools/opencode-sessions/src/db/: discover.rs  mod.rs  overview.rs
tools/opencode-sessions/src/export/: bundle.rs  classify.rs  delta.rs  hotspot.rs  io.rs  mod.rs  rollup.rs  schema.rs  session_output.rs  turn.rs
tools/opencode-sessions/src/models/: export.rs  message.rs  mod.rs  overview.rs
tools/opencode-sessions/src/tree/: browse.rs  display.rs  mod.rs
tools/opencode-sessions/src/tui/: app.rs  input.rs  mod.rs  render.rs
tools/scripts/: render-file.sh  validate-file-interp.sh
tools/token-count-after-expand/: Cargo.toml
tools/token-count-after-expand/src/: main.rs
tools/workflow-optimize/: agent_semaphore.py  export_digest.py  run_batch.py  run_opencode.py
(+676 files in other folders)
