[workspace]
members = [
  "opencode-sessions",
  "model-switcher",
  "chunk-files-by-tokens",
  "token-count-after-expand",
  "iterate-static-check",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.30"
regex = "1.12"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.18", features = ["v7"] }
wait-timeout = "0.2"
tempfile = "3.19"
