[package]
name = "opencode-model-switcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencode-model-switcher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
