[package]
name = "opencode-model-tiers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opencode-model-tiers"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.19"
